fixed css so the toast dosent overlap the search feature

--- a/frontend/src/components/ManageSpots.css
+++ b/frontend/src/components/ManageSpots.css
@@ -166,7 +166,7 @@ link {
   
   .filteredResults {
     position: absolute;
-    top: 50px; /* Adjust as needed */
+    top: calc(100% + 10px); /* Adjust as needed */
     left: 0;
     width: 100%;
     background-color: #fff;
@@ -174,6 +174,8 @@ link {
     border-top: none;
     border-radius: 0 0 5px 5px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 10px; /* Add padding */
+    z-index: 999; /* Ensure the filteredResults appear above other elements */
   }
   
   .filteredResults h5 {
